--- a/App/PeaZip/res/lang/by-cr.txt
+++ b/App/PeaZip/res/lang/by-cr.txt
@@ -1,15 +1,19 @@
 ﻿=== PeaZip language file ===
 Belarusian-Cyrillic 
-6.2
+6.3
 Translated by: MiHLitvin (mih@mail-me.com)
 Last rev. by: MiHLitvin
-Last rev.: 24.07.2016
+Last rev.: 28.11.2016
 
 === PeaZip text group ===
 
-txt_6_2_encext: Add ".enc" suffix to encrypted archives
-txt_6_2_archive: Archive file type
-txt_6_2_container: Container file type
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
+txt_6_2_encext: Дадаваць ".enc" да імя зашіфраваных архіваў
+txt_6_2_archive: Тып архіва
+txt_6_2_container: Тып кантэйнэру
 txt_6_1_ec: Разгарнуць / згарнуць дрэва архіва
 txt_6_0_msq: Сартаваць файлы па тыпе для суцэльнага пакаваньня
 txt_5_9_lff: Аналізаваць файлы й тэчкі
