--- a/App/PeaZip/res/lang/es-es.txt
+++ b/App/PeaZip/res/lang/es-es.txt
@@ -1,12 +1,16 @@
 ﻿=== PeaZip language file ===
 Spanish - Español
-6.2
+6.3
 Traducido por: Francisco Javier F. Serrador, Mario López, Nosi_982
 Last rev. by: Nosi_982
 Last rev.: 20151011
 
 === PeaZip text group ===
 
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
 txt_6_2_encext: Add ".enc" suffix to encrypted archives
 txt_6_2_archive: Archive file type
 txt_6_2_container: Container file type
