--- a/App/PeaZip/res/lang/es-la.txt
+++ b/App/PeaZip/res/lang/es-la.txt
@@ -1,12 +1,16 @@
 ﻿=== PeaZip language file ===
 Spanish (Latin America) - Español (América latina)
-6.2
+6.3
 Translated by: Agustín Bou
 Last rev. by: Agustín Bou
 Last rev.: 20151012
 
 === PeaZip text group ===
 
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
 txt_6_2_encext: Add ".enc" suffix to encrypted archives
 txt_6_2_archive: Archive file type
 txt_6_2_container: Container file type
