--- a/App/PeaZip/res/lang/eu.txt
+++ b/App/PeaZip/res/lang/eu.txt
@@ -1,16 +1,20 @@
 ﻿=== PeaZip language file ===
 - Euskara (Basque)
-6.2
+6.3
 - Itzultzailea: Xabier Aramendi
 - Azken berrikustzailea: Xabier Aramendi
-- Azken berrikuspena: 2016-03-29
+- Azken berrikuspena: 2016-11-06
 
 === PeaZip text group ===
 
-txt_6_2_encext: Add ".enc" suffix to encrypted archives
-txt_6_2_archive: Archive file type
-txt_6_2_container: Container file type
-txt_6_1_ec: Heedatu / bildu artxibo zuhaitza
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
+txt_6_2_encext: Gehitu ".enc" atzizkia enkriptatutako artxiboei
+txt_6_2_archive: Artxibo agiri mota
+txt_6_2_container: Edukiontzi agiri mota
+txt_6_1_ec: Hedatu / bildu artxibo zuhaitza
 txt_6_0_msq: Antolatu agiri motaz konpresio solidorako
 txt_5_9_lff: Aztertu agiriak eta agiritegiak
 txt_5_9_pff: Aztertu, erakutsi agiri idazburua/EOF
