--- a/App/PeaZip/res/lang/no.txt
+++ b/App/PeaZip/res/lang/no.txt
@@ -1,15 +1,19 @@
 ﻿=== PeaZip language file ===
 Norwegian - Norsk
-6.2
+6.3
 Oversatt av: Rune C. Akselsen, Arne Hanssen
 Sist rev. av: Arne Hanssen
-Sist revidert: 20160728
+Sist revidert: 20161112
 
 === PeaZip text group ===
 
-txt_6_2_encext: Add ".enc" suffix to encrypted archives
-txt_6_2_archive: Archive file type
-txt_6_2_container: Container file type
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
+txt_6_2_encext: Legg til endelsen ".enc" til krypterte arkiver
+txt_6_2_archive: Arkiver filtype
+txt_6_2_container: Pakket filtype
 txt_6_1_ec: Utvid / slå sammen arkiv-tre
 txt_6_0_msq: Sorter etter filtype for kompakt pakking
 txt_5_9_lff: Analyser filer og mapper
