--- a/App/PeaZip/res/lang/pl.txt
+++ b/App/PeaZip/res/lang/pl.txt
@@ -1,12 +1,16 @@
 ﻿=== PeaZip language file ===
 Polish - Polski
-6.2
+6.3
 Translated by: Michał Trzebiatowski (2010, 2011), Mateusz Kacprzak <mateusz.kacprzak@yandex.ru> (2012 - 2016)
 Last rev. by: Mateusz Kacprzak using PeTrA
 Last rev.: 2016.07.22
 
 === PeaZip text group ===
 
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
 txt_6_2_encext: Add ".enc" suffix to encrypted archives
 txt_6_2_archive: Archive file type
 txt_6_2_container: Container file type
