--- a/App/PeaZip/res/lang/tr.txt
+++ b/App/PeaZip/res/lang/tr.txt
@@ -1,12 +1,16 @@
 ﻿=== PeaZip language file ===
 Turkish - Türkçe
-6.2
+6.3
 Çeviren: Umut Öcal, Bekir Uçarcı
 Son güncelleyen: Yasin Özdemir - serenler07@gmail.com - Çevrinin büyük bir kısmını (yaklaşık %95) Umut Öcal yapmıştır, ben ise çevrilmemiş alanları ve yeni katılan metinleri çevirdim | Bekir Uçarcı - bekirucarci@gmail.com - 2012 yılından bu yana eklenen kelimelerin çevirisini ben yaptım.
 Son güncelleme: 14/07/2014
 
 === PeaZip text group ===
 
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
 txt_6_2_encext: Add ".enc" suffix to encrypted archives
 txt_6_2_archive: Archive file type
 txt_6_2_container: Container file type
