--- a/App/PeaZip/res/lang/uk.txt
+++ b/App/PeaZip/res/lang/uk.txt
@@ -1,12 +1,16 @@
 ﻿=== PeaZip language file ===
 Ukrainian - Українська
-6.2
+6.3
 Перекладено Міщенко О.С., sasha[at]mishchenko.tk, Пилипчук О.П., pilipchukap[at]rambler[dot]ru
 Last rev. by: IxI_JOKER_IxI (Localize.org.ua)
 Last rev.: 20151030
 
 === PeaZip text group ===
 
+txt_6_3_autoadjust: Auto adjust columns
+txt_6_3_cinfo: Info and comments
+txt_6_3_syn: Synchronize archive with disk
+txt_6_3_uar: Update only files already in archive
 txt_6_2_encext: Add ".enc" suffix to encrypted archives
 txt_6_2_archive: Archive file type
 txt_6_2_container: Container file type
